# AirQualityChecker

./: .gitignore  LICENSE  Main.py  README.md  pyproject.toml
ai-assistance/: contributions.md
data/: OrganizedData.csv  allergies.csv  apiRequestData.csv  nh_locations.csv  organized_data.csv  report.csv
demo/: Demo.webm
design/: add-new-user-allergies-sd.mmd  api-sd.mmd  architecture.mmd  domain-class.mmd  domain.mmd  main-loop-sd.mmd  save-report-from-api-sd.mmd  update-allergy-sd.mmd  use-case-1-ssd.mmd  use-case-2-ssd.mmd  use-case-3-ssd.mmd  use-case-4-ssd.mmd
docs/: SWEProject.pptx  allergy_info.md  app.md  data_organizer.md  google_maps.md  runner.md  user_location.md
process/: meeting-notes.md  outline.md
src/: __init__.py  allergy_info.py  app.py  data_organizer.py  google_maps.py  runner.py  user_location.py
tests/: __init__.py  test_runner.py
tests/old_test_backup/: testAllergyInfo.py  testApp.py  testDataExtraction.py  test_app.py  test_user_location.py
tests/test_allergyinfo/: test_allergy_addnewuser.py  test_allergy_addnewuserwithallergy.py  test_allergy_constructor.py  test_allergy_getallergyinfo.py  test_allergy_info.py  test_allergy_printcsv.py  test_allergy_updateallergyinfo
tests/test_app/: test_app_addallergyinfo.py  test_app_constructor.py  test_app_fetchairdata.py  test_app_getallergyinfo.py  test_app_organizedata.py  test_app_setuserlocation.py  test_report.py
tests/test_dataorganizer/: test_data_extraction.py  test_data_organizer.py
tests/test_googlemaps/: test_google_maps.py  test_googlemaps_constructor.py  (+3 more)
(+4 files in other folders)
