[project]
name = "project-jackie-matti"
version = "0.1.0"
description = "A program designed to give you real-time air quality and pollen updates"
authors = [
    {name = "Jacqueline, Matti"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
